--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	"license":"MIT",
 	"homepage":"http://www.wunan.online",
 	"keywords":["iwunan"],
+	"version":"1.0",
 	"authors":[
 	   {
 		"name":"spexial Nan",
